2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* README:
	* configure.in:
	* data/glade/PlaylistWindow.glade:
	* data/images/Makefile.am:
	* data/images/muine-add-album-16.png:
	* data/images/muine-add-album.png:
	* data/images/muine-albums.png:
	* data/images/muine-forward.png:
	* data/images/muine-next-16.png:
	* data/images/muine-pause-16.png:
	* data/images/muine-play-16.png:
	* data/images/muine-previous-16.png:
	* data/images/muine-queue.png:
	* data/images/muine-rewind.png:
	* src/About.cs:
	* src/AddAlbumWindow.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/StockIcons.cs:

	Aestethic fixes, release 0.1.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Remove obsolete code.
	
	* src/SongDatabase.cs:

	Small memory optimization.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/metadata.c: (assign_metadata_mp3), (metadata_free):

	Plug leaks.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/metadata.c: (assign_metadata_mp3),
	(assign_metadata_ogg), (metadata_get_track_number):
	* libmuine/metadata.h:
	* src/Album.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Have songs sorted by tracknumber in their albums.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:

	Sort by artists, and then album name.
	
	* src/PlaylistWindow.cs:

	Scroll to playing song when restoring window visibility.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* libmuine/Makefile.am:
	* libmuine/pointer-list-view.c: (scroll_to_path):
	* libmuine/rb-ellipsizing-label.c: (rb_strcmp), (rb_str_is_equal),
	(measure_string_width), (compute_character_widths),
	(start_element_handler), (end_element_handler),
	(append_ellipsized_text), (text_handler), (ellipsize_string),
	(rb_string_ellipsize_start), (rb_string_ellipsize_end),
	(rb_string_ellipsize_middle), (set_text_ellipsized),
	(rb_ellipsizing_label_get_type), (rb_ellipsizing_label_init),