@@ -23,3 +23,6 @@ import/list/direct edit
 
 --------------
 - panel crash
+
+- Do something special with performer tags, other than treat them as artists?
+- The Cardigans sorted as Cardigans or The Cardigans?
