@@ -103,7 +103,7 @@
 	      <child>
 		<widget class="GtkLabel" id="file_label">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">FILENAME</property>
+		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
